@@ -1,5 +1,13 @@
 2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/nlib.lisp: Clean up.
+	src/interp/i-syscmd.boot, src/interp/compat.boot,
+	src/interp/pathname.boot, src/interp/i-toplev.boot,
+	src/interp/daase.lisp, src/interp/vmlisp.lisp:
+	Adjust.
+
+2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	Remove patches.lisp.
 	* src/interp/patches.lisp: Remove, move
 	functionality to:
